# hyprscroller

./: .gitignore  CMakeLists.txt  README.md  build-errors.sh  build_error_20260404_050445.txt  hyprpm.toml
docs/: commit-convention.md  smoke-test-checklist.md
src/: dispatchers.cpp  dispatchers.h  list.h  main.cpp
src/core/: core.cpp  core.h  direction.cpp  direction.h  interval.h  layout_math.cpp  layout_math.h  layout_profile.cpp  layout_profile.h  types.h
src/layout/canvas/: commands.cpp  core.cpp  dispatch.cpp  dispatch_logic.cpp  dispatch_logic.h  focus.cpp  handoff_state.h  internal.h  layout.h  overview.cpp  route.cpp  route.h  route_logic.cpp  route_logic.h  workspace.cpp
src/layout/lane/: actions.cpp  core.cpp  geometry.cpp  lane.h
src/model/: stack.cpp  stack.h  window.cpp
src/overview/: logic.cpp  logic.h  model.cpp  model.h  monitor_space.cpp  monitor_space.h  orientation_math.cpp  orientation_math.h  pass_element.cpp  pass_element.h  render.cpp  render.h  session.cpp  session.h
tests/: logic_tests.cpp
